--- a/design/css/style.css
+++ b/design/css/style.css
@@ -1,3 +1,194 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  font-family: "Morl";
+}
 
+body {
+  background-color: #303740;
+  overflow: hidden;
+}
+
+header {
+  height: 100px;
+  width: 100%;
+  background-color: #303740;
+  position: fixed;
+  z-index: 99;
+  box-shadow: 0px 2px 10px #000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header .left {
+  display: flex;
+  align-items: center;
+}
+
+header img {
+  width: 80px;
+  margin-left: 50px;
+}
+
+header .left ul {
+  margin-left: 20px;
+  width: 200px;
+}
+
+header ul li {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+header ul li a {
+  color: white;
+  font-size: 1.5em;
+}
+
+header .right ul {
+  width: 600px;
+}
+
+.sec1 {
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.sec1 .left {
+  width: 45%;
+  height: 100%;
+  background-color: #303740;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  clip-path: ellipse(100% 80% at 0% 50%);
+}
+
+.content {
+  max-width: 500px;
+}
+
+.content h1 {
+  color: white;
+  font-size: 6em;
+  font-weight: bolder;
+  line-height: 0.9em;
+}
+
+.content h1 span {
+  color: #fede0e;
+}
+
+.content p {
+  color: white;
+  letter-spacing: 1px;
+  margin: 40px 0;
+}
+
+.content button {
+  color: #000;
+  height: 50px;
+  padding: 0 20px;
+  background-color: #fede0e;
+  border-radius: 10px;
+  border: none;
+  font-weight: bolder;
+  font-size: 1.5em;
+  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.5);
+}
+
+.sec1 .right {
+  position: relative;
+  width: 50%;
+  height: 100%;
+  background-color: rgb(138, 189, 62);
+  clip-path: ellipse(70% 80% at 70% 50%);
+  overflow: hidden;
+}
+
+.pringles {
+  position: absolute;
+  z-index: 999;
+  transform: translateY(-50%);
+  left: 70%;
+  top: 60%;
+  width: 600px;
+  transform: translate(-50%, -50%) scale(1.5);
+  filter: drop-shadow(0px 0px 10px #000);
+}
+
+.right-right {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(138, 189, 62);
+  clip-path: ellipse(50% 70% at 70% 50%);
+}
+
+.right-right-right {
+  width: 100%;
+  height: 100%;
+  background-color: #e36c19;
+  clip-path: ellipse(50% 70% at 90% 50%);
+}
+
+@media (max-width: 1400px) {
+  header {
+    position: relative;
+  }
+  .sec1 {
+    flex-direction: column;
+  }
+  .sec1 .left {
+    width: 100%;
+    clip-path: ellipse(100% 100% at 50% 0%);
+    text-align: center;
+  }
+  .sec1 .right {
+    width: 100%;
+    clip-path: ellipse(100% 90% at 50% 100%);
+  }
+  .sec1 .right-right {
+    clip-path: ellipse(80% 70% at 50% 100%);
+  }
+  .sec1 .right-right-right {
+    clip-path: ellipse(60% 50% at 50% 100%);
+  }
+  .pringles {
+    position: absolute;
+    left: 50%;
+    top: 100%;
+    width: 450px;
+    transform: translate(-50%, -100%);
+    filter: drop-shadow(0px 0px 10px #000);
+  }
+}
+@media (max-width: 900px) {
+  .left ul {
+    display: none;
+  }
+  header .right ul {
+    width: 500px;
+  }
+}
+@media (max-width: 600px) {
+  header img {
+    display: none;
+  }
+  header .right {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  .sec1 p {
+    padding: 0 30px;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
